# Notes

./: .gitignore  README.md  pubspec.yaml
.agent/: rule.md
android/: settings.gradle
android/app/: build.gradle
assets/translations/: en.json  ru.json  uz.json
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/const/: colors.dart  item_colors.dart
lib/core/const/: api_constants.dart  app_constants.dart  colors.dart  item_colors.dart  nav_pages.dart
lib/core/theme/: theme.dart
lib/core/utils/: date_formatter.dart
lib/core/widgets/: bottom_nav_fab.dart  bottom_nav_item.dart  circle_container.dart  feature_card.dart  notes_card.dart  notification_dialog.dart  selectable_text.dart  text.dart  text_formatting_toolbar.dart
lib/functions/: add_read_delete.dart
lib/getx/: get.dart
lib/notification/: notification.dart
lib/screens/: add_note.dart  home.dart  settings.dart  splash.dart
lib/theme/: theme.dart
lib/widgets/: circle_container.dart  notes_card.dart  notification_dialog.dart  text.dart
linux/: CMakeLists.txt
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
notification-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notification-service/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
notification-service/app/routes/: notifications.py
notification-service/app/services/: __init__.py  fcm.py  scheduler.py
windows/flutter/: generated_plugins.cmake
(+23 files in other folders)
